metadata-classic/objects/MIIncident__c.object
<CustomObject>
    <fields>
        <fullName>LinkToDocumentation__c</fullName>
        <description>Link to Google Drive documentation, mainly used for legacy comps</description>
        <label>Link To Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MICategory__c</fullName>
        <description>Marketplace Integrity Incident categories.</description>
        <label>MI Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concern about user</fullName>
                </value>
                <value>
                    <fullName>Deposit no show</fullName>
                </value>
                <value>
                    <fullName>Payment issues</fullName>
                </value>
                <value>
                    <fullName>Physical harm / Inappropriate contact</fullName>
                </value>
                <value>
                    <fullName>Property damage</fullName>
                </value>
                <value>
                    <fullName>Theft</fullName>
                </value>
                <value>
                    <fullName>Unprofessional behavior</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory work</fullName>
                </value>
                <value>
                    <fullName>Work not complete</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MICntCSavings__c</fullName>
        <description>This is the amount saved in MI when leadership decides not to compensate. If the incident is closed, the For MI Leadership picklist is CntC, and TT did not compensate, this value is the Desired Resolution Amount. Else, 0.</description>
        <formula>IF( 
AND(
ISPICKVAL( Status__c , &quot;Closed&quot;),
ISPICKVAL( ForMILeadership__c , &quot;Chose not to compensate&quot;),
OR( AmountCompensatedByThumbtack__c = 0, ISNULL(AmountCompensatedByThumbtack__c) ) ),
DesiredResolutionAmount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the amount saved in MI when leadership decides not to compensate.</inlineHelpText>
        <label>MI CntC Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MIPPSavings__c</fullName>
        <description>This is the amount saved in MI by using MI policies and procedures. If the incident is closed, the For MI Leadership picklist is MI P&amp;P, and TT did not compensate, this value is the Desired Resolution Amount. Else, 0.</description>
        <formula>IF( 
AND(
ISPICKVAL( Status__c , &quot;Closed&quot;),
ISPICKVAL( ForMILeadership__c , &quot;MI Policies &amp; Procedures&quot;),
OR( AmountCompensatedByThumbtack__c = 0, ISNULL(AmountCompensatedByThumbtack__c) ) ),
(DesiredResolutionAmount__c -  AmountCompensatedByPro__c - AmountResolvedbyPro__c ) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the amount saved in MI by using MI policies and procedures.</inlineHelpText>
        <label>MI P&amp;P Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MISubcategory__c</fullName>
        <description>Marketplace Integrity Incident Subcategories.</description>
        <label>MI Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MICategory__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Charged Unfairly</fullName>
                </value>
                <value>
                    <fullName>Check or payment scam</fullName>
                </value>
                <value>
                    <fullName>Criminal history</fullName>
                </value>
                <value>
                    <fullName>Fraudulent charges</fullName>
                </value>
                <value>
                    <fullName>Harassment</fullName>
                </value>
                <value>
                    <fullName>Licensing concerns</fullName>
                </value>
                <value>
                    <fullName>Threat or intimidation</fullName>
                </value>
                <value>
                    <fullName>Unprofessional communication</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ModriaCaseNumber__c</fullName>
        <description>The reference number of Modria solution center.</description>
        <label>Modria Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModriaStatus__c</fullName>
        <description>Field to store the status of the external Modria.com solution center.</description>
        <label>Modria Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Awaiting pro response</fullName>
                </value>
                <value>
                    <fullName>Awaiting customer response</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
                <value>
                    <fullName>Escalation initiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultipleComplaintsAgainstPro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Complaints Against Pro?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewCallFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Call Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewCaseFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Case Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewEmailFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate that one or more of the related cases has a new email response.</description>
        <label>New Email Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewPostFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Post Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextFollowupDate__c</fullName>
        <label>Next Follow-up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NextFollowupTask__c</fullName>
        <description>Text area populated via workflow to store information about the next follow-up task needed.</description>
        <label>Next Follow-up Task</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NonTTVerifiedReviews__c</fullName>
        <description>Pro&apos;s number of non-verified reviews</description>
        <label>Non-TT Verified Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>If this is a PDG Incident, add any relevant notes here.</inlineHelpText>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberofHires__c</fullName>
        <description>Field for the number of hires column in legacy comp tracker</description>
        <label>Number of Hires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofQuotes__c</fullName>
        <description>Field for number of quotes column from legacy comp tracker</description>
        <label>Number of Quotes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>The contact channel or method in which the incident originated.</description>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App Integration</fullName>
                </value>
                <value>
                    <fullName>Concerning review</fullName>
                </value>
                <value>
                    <fullName>Directly Question</fullName>
                </value>
                <value>
                    <fullName>Dispute form</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Inbound Phone</fullName>
                </value>
                <value>
                    <fullName>In-Product</fullName>
                </value>
                <value>
                    <fullName>Live Chat</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound Phone</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Solution Center</fullName>
                </value>
                <value>
                    <fullName>Text Message</fullName>
                </value>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginalCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The case that originated the MI Incident.</description>
        <label>Original Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>MI Incidents</relationshipLabel>
        <relationshipName>MIIncidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherPartyContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the second party of an MI Incident, usually the pro.</description>
        <label>Other Party Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MI Incidents (Other Party Contact)</relationshipLabel>
        <relationshipName>MI_Incidents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OutcomeCustomer__c</fullName>
        <description>The outcome of the dispute resolution for the customer.</description>
        <label>Outcome - Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arbitration judgement</fullName>
                </value>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>No action</fullName>
                </value>
                <value>
                    <fullName>Pursued outside of Thumbtack</fullName>
                </value>
                <value>
                    <fullName>Resolution reached</fullName>
                </value>
                <value>
                    <fullName>Thumbtack compensation</fullName>
                </value>
                <value>
                    <fullName>Thumbtack compensation (low dollar)</fullName>
                </value>
                <value>
                    <fullName>Unable to facilitate resolution</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutcomePro__c</fullName>
        <description>The outcome of the dispute resolution for the Pro.</description>
        <label>Outcome - Pro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>No action</fullName>
                </value>
                <value>
                    <fullName>Pro fixed work</fullName>
                </value>
                <value>
                    <fullName>Pro offered other resolution</fullName>
                </value>
                <value>
                    <fullName>Pro resolved with refund</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerAssignedDate__c</fullName>
        <description>The date/time the owner of the MI Incident record was assigned to the current owner; populated via workflow.</description>
        <label>Owner Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OwnerFullName__c</fullName>
        <formula>IF(
  ISBLANK(Owner:User.Id), 
  Owner:Queue.QueueName,
  Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName
)</formula>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerisQueue__c</fullName>
        <description>Boolean to indicate true if the MI Incident is owned by a queue.</description>
        <formula>BEGINS(OwnerId,&quot;00G&quot;)</formula>
        <label>Owner is Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDGAwareness__c</fullName>
        <description>Picklist field to indicate if the customer&apos;s awareness of the property damage guarantee.</description>
        <inlineHelpText>Select if the customer was previously aware or not aware of the property damage guarantee</inlineHelpText>
        <label>PDG Awareness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer was not aware</fullName>
                </value>
                <value>
                    <fullName>Customer was aware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDGEligibility__c</fullName>
        <description>Formula field to indicate if the incident may be eligible for the Property Damage Guarantee</description>
        <formula>IF(OR(ISPICKVAL(AdditionalEligibilityFactors__c, &quot;Not Marked as Hired&quot;),
ISPICKVAL(AdditionalEligibilityFactors__c, &quot;Damage is to Excluded Property&quot;),
ISPICKVAL(AdditionalEligibilityFactors__c, &quot;Excluded Category&quot;),
ISPICKVAL(AdditionalEligibilityFactors__c, &quot;Not Physical Damage&quot;),
ISPICKVAL(AdditionalEligibilityFactors__c, &quot;Damage was not Accidental/Unintentional&quot;),
ISPICKVAL(AdditionalEligibilityFactors__c, &quot;Damage Not Caused by Thumbtack Pro&quot;),
ISPICKVAL(AdditionalEligibilityFactors__c, &quot;Not Damage from Original Project Requested&quot;),
ISPICKVAL(AdditionalEligibilityFactors__c, &quot;Theft&quot;),
ISPICKVAL(AdditionalEligibilityFactors__c, &quot;Other - Not Eligible (Leave Notes)&quot;),
ISPICKVAL(AdditionalEligibilityFactors__c, &quot;Other (Leave Notes)&quot;)),
&quot;Not Eligible&quot;,
IF(OR(
ISPICKVAL(AdditionalEligibilityFactors__c, &quot;Meets all Criteria&quot;),
ISPICKVAL(AdditionalEligibilityFactors__c, &quot;Other - Eligible (Leave Notes)&quot;)),
&quot;Eligible&quot;, 
IF( AND( quotes_hired__c = True, 
ElapsedReportedTimeHours__c &lt;= 72, 
DATETIMEVALUE(requests_create_time__c) &gt;= DATETIMEVALUE( &apos;2016-07-11 12:00:00&apos; )), 
&quot;May Be Eligible&quot;,
&quot; Not Eligible &quot; 
)))</formula>
        <inlineHelpText>The incident may be eligible for the Property Damage Guarantee if a) there is property damage, b) the project request was made on or after 7/11/16,  c) pro was marked as hired, and d) the property damage was reported within 72 hours of damage occurrence.</inlineHelpText>
        <label>PDG Eligibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDGNotes__c</fullName>
        <label>PDG Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDGStatus__c</fullName>
        <label>PDG Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Thumbtack Solution Center</fullName>
                </value>
                <value>
                    <fullName>Pre-Crawford Resolution Process</fullName>
                </value>
                <value>
                    <fullName>Claim sent to Crawford</fullName>
                </value>
                <value>
                    <fullName>Claim in Process</fullName>
                </value>
                <value>
                    <fullName>Paid (under Guarantee)</fullName>
                </value>
                <value>
                    <fullName>Satisfaction Payout</fullName>
                </value>
                <value>
                    <fullName>ArbiClaims</fullName>
                </value>
                <value>
                    <fullName>Handled By Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreconcileStatus__c</fullName>
        <description>This is the field where MI can keep track of the Preconcile status of their Incident.</description>
        <label>Preconcile Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not filed</fullName>
                </value>
                <value>
                    <fullName>Filed</fullName>
                </value>
                <value>
                    <fullName>Dialogue</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreviouslyBannedUserID__c</fullName>
        <description>The ID of the originally banned TT pro account. This field will not apply in every incident, only those involving a pro who was previously banned.</description>
        <inlineHelpText>The ID of the originally banned TT pro account. This field will not apply in every incident, only those involving a pro who was previously banned.</inlineHelpText>
        <label>Previously Banned User ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>The priority or urgency of the incident.</description>
        <inlineHelpText>Tier 1: Amount less than 15k, no high-risk factors, no urgent time-restraints, GSRs
Tier 2: Amount more than 15k, time sensitive,high profile
Tier 3: Sensitive or urgent, bodily harm, serious threats, anything that should be address immediately
Tier 4:</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProAccountNumber__c</fullName>
        <description>Pro&apos;s admin account number</description>
        <label>Pro Account Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to account - indicates the pro involved in the MI incident.</description>
        <label>Pro Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MI Incidents (Pro Account)</relationshipLabel>
        <relationshipName>MIIncidentsPro</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contact record for the pro associated to the incident.</description>
        <label>Pro Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>MIIncidentsPro</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProEmail__c</fullName>
        <description>Email address of the pro; populated via external data query when incident is created, but editable on the MI Incident for communication purposes - when changed on MI Incident it will not update the Pro&apos;s account or Admin.</description>
        <label>Pro Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProID__c</fullName>
        <inlineHelpText>Enter the pro&apos;s Thumbtack admin ID number here please.</inlineHelpText>
        <label>Pro ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProIPAddresses__c</fullName>
        <description>Pro&apos;s IP activity from legacy comp tracker</description>
        <label>Pro IP Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProIsHighVolumeAccount__c</fullName>
        <description>Formula boolean field to indicate if the related Pro Account is part of the managed accounts program or potentially a high volume quoter.  Used in list view and workflow filtering.</description>
        <formula>IF(NOT ISBLANK(ProAccount__r.ParentId), true,
IF(VALUE(pro_quotes_last_30__c) &gt;= 250, true,
false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro Is High Volume Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProPhone__c</fullName>
        <description>The phone number of the related pro; populated on incident creation via external data source, however editable by MI agent during incident resolution; if edited on incident it does not update the pro&apos;s account phone number in admin.</description>
        <label>Pro Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ProSignupDate__c</fullName>
        <description>Date the pro signed up for TT</description>
        <label>Pro Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProfessionalAdminLink__c</fullName>
        <description>Field for the professional&apos;s admin link, mainly used for legacy comps</description>
        <label>Professional Admin Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ProfessionalName__c</fullName>
        <description>Field for professional&apos;s name. Mainly used for legacy comps</description>
        <label>Professional Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalProfileCompletion__c</fullName>
        <description>Gold/Silver/Bronze profile</description>
        <label>Professional Profile Completion</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposedMiddleGround__c</fullName>
        <description>Text area to capture proposed middle grounds for Tier 2 resolution. In the future, this can become a pick list.</description>
        <inlineHelpText>Please briefly explain the middle ground resolution.</inlineHelpText>
        <label>Proposed Middle Ground</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProsCardCharged__c</fullName>
        <description>Date the professionals credit card was charged.</description>
        <label>Pro&apos;s Card Charged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QAForm__c</fullName>
        <description>Link launched from a list view to open the MI Incident QA form.</description>
        <formula>HYPERLINK(&quot;https://www.getfeedback.com/r/R6zCA7n8?IncidentID=&quot;&amp;Id&amp;&quot;&amp;IncidentOwnerID=&quot;&amp;OwnerId&amp;&quot;&amp;USER=&quot;&amp;$User.Id&amp;&quot;&amp;OwnerName=&quot;&amp;OwnerFullName__c&amp;&quot;&quot;, IMAGE(&quot;/resource/StarUtilityIcon&quot;, &quot;Launch QA Form&quot;, 15,15), &quot;_blank&quot;)</formula>
        <label>QA Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasonfornotchargingcard__c</fullName>
        <description>Notes for the reason for not charging the card.</description>
        <label>Reason for not charging card</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecognizedDamageDate__c</fullName>
        <description>The date the damage/incident was recognized.</description>
        <inlineHelpText>The date the damage or other incident was recognized.</inlineHelpText>
        <label>Date Damage Recognized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecommendedAction__c</fullName>
        <description>Open text field for agent&apos;s to store information about the recommended action(s) as part of an escalation to MI leadership.</description>
        <label>Recommended Action</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RemovalReason__c</fullName>
        <description>Reasons for banning to resolve incident</description>
        <label>Removal Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ResolutionTier__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No response from pro at all</fullName>
                </value>
                <value>
                    <fullName>Pro became unresponsive during dispute</fullName>
                </value>
                <value>
                    <fullName>Unprofessional conduct</fullName>
                </value>
                <value>
                    <fullName>Other (please add to Tier 4 note)</fullName>
                </value>
                <value>
                    <fullName>Preconcile - lost arbitration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportedDate__c</fullName>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReporterContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This the contact of the person who reported the MI issue.</description>
        <inlineHelpText>This the contact of the person who reported the MI issue.</inlineHelpText>
        <label>Reporter Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MI Incidents</relationshipLabel>
        <relationshipName>MI_Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestCategory__c</fullName>
        <description>Thumbtack category of the customer&apos;s request</description>
        <label>Request Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RequestDate__c</fullName>
        <description>The date the customer made their request on Thumbtack.</description>
        <inlineHelpText>This is the date that the customer made their request on Thumbtack.</inlineHelpText>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestID__c</fullName>
        <inlineHelpText>Request ID of the customer&apos;s request that the pro quoted on.</inlineHelpText>
        <label>Request ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolutionNotes__c</fullName>
        <description>Open text area to add notes when the resolution tier = Other</description>
        <label>Resolution Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResolutionTier__c</fullName>
        <description>Tier of resolution for the Incident</description>
        <label>Resolution Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 0 - Lost Communication</fullName>
                </value>
                <value>
                    <fullName>Tier 1 - Re-established Communication</fullName>
                </value>
                <value>
                    <fullName>Tier 2 - Found Middle Ground</fullName>
                </value>
                <value>
                    <fullName>Tier 3 - Flagged Pro</fullName>
                </value>
                <value>
                    <fullName>Tier 4 - Removed Pro</fullName>
                </value>
                <value>
                    <fullName>Tier 5 - Thumbtack Compensation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Routing__c</fullName>
        <description>Formula field that will indicate which team should accept the incident; used in list views and references related account data.</description>
        <formula>IF(ProAccount__r.ManagedAccount__c, &quot;Managed Account&quot;, NULL)</formula>
        <label>Routing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendProtoCollections__c</fullName>
        <description>Picklist whose values indicate whether or not the pro needs to be sent to collections.</description>
        <inlineHelpText>Select &apos;Yes&apos; if the pro needs to be sent to collections.</inlineHelpText>
        <label>Send Pro to Collections?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SenttoCollectionsby__c</fullName>
        <label>Sent to Collections by</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SettledAmount__c</fullName>
        <description>Formula field to calculate difference between desired resolution amount and TT comp amount for Tier 5 resolutions, to see what TT saves by settling.</description>
        <formula>IF( 
AND( 
ISPICKVAL( ResolutionTier__c , &quot;Tier 5 - Thumbtack Compensation&quot;), 
ISPICKVAL( Status__c , &quot;Closed&quot; ),
( AmountCompensatedByThumbtack__c &gt; 0) ),
(DesiredResolutionAmount__c -  AmountCompensatedByThumbtack__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SolutionCenterStage__c</fullName>
        <description>The current status and stage of the related Dispute (Solution Center) record.</description>
        <inlineHelpText>The current status and stage of the related Dispute (Solution Center) record.</inlineHelpText>
        <label>Solution Center Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Geo State, from the customer&apos;s request.</description>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Marketplace Integrity Incident status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SummaryofWhatHappened__c</fullName>
        <description>Field to summarized the issue, mainly for legacy comps</description>
        <label>Summary of What Happened</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TTVerifiedReviews__c</fullName>
        <description>Pro&apos;s number of TT verified reviews</description>
        <label>TT Verified Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>